# Modelim-ne-Fizike-Modelling-in-Physics-

./: README.md  README_Modellimi_ne_Fizike.md
Part_0/: 0_Paradigmat_Metodat_ODE.ipynb
Pjesa_0/: 0_Paradigmat_Metodat_ODE.ipynb  README.md
Pjesa_0/oscillator_prod_cpp/: CMakeLists.txt  README.md
Pjesa_0/oscillator_prod_cpp/include/: cli.hpp  integrators.hpp  oscillator.hpp
Pjesa_0/oscillator_prod_cpp/src/: cli.cpp  integrators.cpp  main.cpp  oscillator.cpp
Pjesa_0/oscillator_prod_julia/: Project.toml  README.md
Pjesa_0/oscillator_prod_julia/scripts/: plot_results.jl  run_oscillator.jl
Pjesa_0/oscillator_prod_julia/src/: OscillatorProdDemo.jl
Pjesa_0/oscillator_prod_python/: pyproject.toml
Pjesa_0/oscillator_prod_python/scripts/: plot_results.py  run_oscillator.py
Pjesa_0/oscillator_prod_python/src/oscillator/: __init__.py  diagnostics.py  integrators.py  models.py
Pjesa_0/oscillator_prod_python/tests/: test_energy_drift.py
