[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oscillator-prod-demo"
version = "0.1.0"
description = "Production-style oscillator demo for modelling-in-physics course"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
